# Test

./: Cargo.toml  README.md  build.rs  caddyfile
benches/: bench.rs
src/: css_utils.rs  error_400_utils.rs  error_utils.rs  file_cache.rs  file_utils.rs  handlers.rs  main.rs  metrics.rs  tracing_config.rs
src/api/: items.rs  mod.rs  users.rs
src/db/: connection.rs
src/models/: item.rs  user.rs
src/utils/: handlers.rs
static/: all.css  index.html  styles.css
static/404/: 404.html
static/dominio1.com/public/: all.css
static/dominio1.com/public/404/: 404.html
static/dominio1.com/public/index/: index.html  index_script.js
static/dominio1.com/public/login/: login.html  login_script.js  login_styles.css
static/index/: index.html  index_styles.css
static/login/: login.html  login_script.js  login_styles.css
tests/: integration_test.rs
