[package]
name = "test2"
version = "0.1.0"
edition = "2021"

[dependencies]

# Tokio para manejo asíncrono
tokio = { version = "1.43.0", features = ["full"] }
# Actix para el servidor web
actix-web = "4.9.0"
# Detectar automáticamente el tipo MIME (Multipurpose Internet Mail Extensions) de un archivo basándose en su extensión.
mime_guess = "2.0.5"
# Actix para servir los archivos estáticos
actix-files = "0.6.6"
# Para llevar un registro
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-actix-web = "0.7.15"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.28.0"
opentelemetry = { version = "0.27.1", features = ["rt-tokio"] }
opentelemetry-jaeger = "0.22.0"
lazy_static = "1.5.0"  # Exportador para Jaeger



