[package]
name = "Test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix para el servidor web
#actix-web = { version = "4.9.0", features = ["openssl"] }
actix-web = "4.9.0"
# Tokio para manejo asíncrono
tokio = { version = "1.43.0", features = ["full"] }


[features]
default = []
[dev-dependencies]
# Dependencias de desarrollo si las necesitas más adelante


