[package]
name = "Test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Actix para el servidor web
actix-web = "4.9.0"

serde_json = "1.0.135"

# Para la base de datos
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "tls-native-tls"] }
serde = { version = "1", features = ["derive"] }

[features]
default = []
[dev-dependencies]
# Dependencias de desarrollo si las necesitas más adelante


